@@ -27,7 +27,7 @@ path.photongi.caustic.lookup.radius = 0.15
 #path.photongi.debug.type = showindirectpathmix
 #path.photongi.persistent.file = cornell.pgi
 ##
-path.pathdepth.total = 1
+path.pathdepth.total = 5
 #light.maxdepth = 1
 #film.filter.width = 2
 #tilepath.sampling.aa.size = 21
